...
                         if success {
                             let ac = UIAlertController(title: "Authentication success", message: "Well Done", preferredStyle: .alert)
                             ac.addAction(UIAlertAction(title: "Ok", style: .default))
                             self?.present(ac, animated: true)
                         } else {
                             let ac = UIAlertController(title: "Authentication failed", message: "You could not be verified; please try again.", preferredStyle: .alert)
                             ac.addAction(UIAlertAction(title: "OK", style: .default))
                             self?.signOut()
                             //  self?.present(ac, animated: true)
                             self?.dismiss(animated: true, completion: nil)

                         }
                     }
                 }
             }
             else {
                 let ac = UIAlertController(title: "Biometry unavailable", message: "Your device is not configured for biometric authentication.", preferredStyle: .alert)
                 ac.addAction(UIAlertAction(title: "OK", style: .default))
                 self.present(ac, animated: true)
             }
         }

         func signOut() {
...
